--- a/platforms/android/gradle.properties
+++ b/platforms/android/gradle.properties
@@ -4,3 +4,7 @@ android.useDeprecatedNdk=true
 cdvMinSdkVersion=19
 android.useAndroidX=true
 android.enableJetifier=true
+MYAPP_UPLOAD_STORE_FILE=my-release-key.keystore
+MYAPP_UPLOAD_KEY_ALIAS=my-release-key
+MYAPP_UPLOAD_STORE_PASSWORD=123456
+MYAPP_UPLOAD_KEY_PASSWORD=123456
